<resources>
    <string name="app_name">Actions App</string>

    <string name="click_to_open_app">Click to open app</string>

    <string name="feature_1">feature 1</string>
    <string name="feature_2">feature 2</string>
    <string name="feature_3">feature 3</string>
    <string name="feature_4">feature 4</string>

    <string name="title_feature_1">title 1</string>
    <string name="title_feature_2">title 2</string>
    <string name="title_feature_3">title 3</string>
    <string name="title_feature_4">title 4</string>

    <string name="subtitle_feature_1">this is feature 1</string>
    <string name="subtitle_feature_2">this is feature 2</string>
    <string name="subtitle_feature_3">this is feature 3</string>
    <string name="subtitle_feature_4">this is feature 4</string>

    <string name="feature_one">one</string>
    <string name="feature_two">two</string>
    <string name="feature_three">three</string>
    <string name="feature_four">four</string>

    <string-array name="feature_one">
        <item>um</item>
        <item>hum</item>
        <item>UMM</item>
        <item>UM</item>
        <item>uma</item>
        <item>1</item>
    </string-array>

    <string-array name="feature_two">
        <item>duas</item>
        <item>Duas</item>
        <item>dois</item>
        <item>Does</item>
        <item>does</item>
        <item>2</item>
    </string-array>

    <string-array name="feature_three">
        <item>tres</item>
        <item>treis</item>
        <item>TRES</item>
        <item>Tres</item>
        <item>três</item>
        <item>3</item>
    </string-array>

    <string-array name="feature_four">
        <item>quatro</item>
        <item>quatru</item>
        <item>Quatros</item>
        <item>Cuatro</item>
        <item>cuatru</item>
        <item>4</item>
        <item>tela de teste</item>
    </string-array>

</resources>
