<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/feature1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_1"
            app:layout_constraintBottom_toTopOf="@+id/feature3"
            app:layout_constraintEnd_toStartOf="@+id/feature2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/feature2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_2"
            app:layout_constraintBottom_toTopOf="@+id/feature4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/feature1"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/feature3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/feature4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feature1" />

    <Button
            android:id="@+id/feature4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/feature3"
            app:layout_constraintTop_toBottomOf="@+id/feature2" />

</androidx.constraintlayout.widget.ConstraintLayout>